{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 33,
  "lineage": "e7b16e4e-deba-2625-ef4e-13f04c35f583",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terra-eip-nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-b7ad466d",
            "domain": "vpc",
            "id": "eipalloc-0ed061d23cc5211e9",
            "network_interface": "eni-0f29c9d21af6c672a",
            "private_dns": "ip-10-80-1-188.eu-west-3.compute.internal",
            "private_ip": "10.80.1.188",
            "public_dns": "ec2-52-47-134-233.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.134.233",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terra-eip-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terra-app",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087855b6c8b59a9e4",
            "arn": "arn:aws:ec2:eu-west-3:233224911788:instance/i-080bc086a1ed12774",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-080bc086a1ed12774",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0aead06e639eb04c8",
            "private_dns": "ip-10-80-2-207.eu-west-3.compute.internal",
            "private_ip": "10.80.2.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bc5b9e45dcbbe738",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d64322c9f68a4546",
            "tags": {
              "Name": "terraform-app-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07dae8bfc36b9702f"
            ]
          },
          "depends_on": [
            "aws_security_group.terra-private-access",
            "aws_subnet.terra-subnet-private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terra-bastion",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087855b6c8b59a9e4",
            "arn": "arn:aws:ec2:eu-west-3:233224911788:instance/i-07e4f67a14f5ffc9a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-07e4f67a14f5ffc9a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f3cf2a9ca3c876b1",
            "private_dns": "ip-10-80-1-39.eu-west-3.compute.internal",
            "private_ip": "10.80.1.39",
            "public_ip": "15.188.47.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c01c3184c9360a94",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1d64710864ce3d1",
            "tags": {
              "Name": "terraform-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b8de07fb6bf039d9"
            ]
          },
          "depends_on": [
            "aws_security_group.terra-bastion-access",
            "aws_subnet.terra-subnet-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terra-db",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087855b6c8b59a9e4",
            "arn": "arn:aws:ec2:eu-west-3:233224911788:instance/i-0fc6ce0a1ee6373ea",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0fc6ce0a1ee6373ea",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0cc62fbb87389f91b",
            "private_dns": "ip-10-80-3-63.eu-west-3.compute.internal",
            "private_ip": "10.80.3.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a6de24c0bb467669",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4afb8e059016c14",
            "tags": {
              "Name": "terraform-db-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07dae8bfc36b9702f"
            ]
          },
          "depends_on": [
            "aws_security_group.terra-private-access",
            "aws_subnet.terra-subnet-db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-01df90795cfe2c7a2",
            "owner_id": "233224911788",
            "tags": {
              "Name": "terra-igw"
            },
            "vpc_id": "vpc-0a912388071284f86"
          },
          "depends_on": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "set-main-routetb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085b2564eb0ce2836",
            "original_route_table_id": "rtb-000ca5d3961ca4db2",
            "route_table_id": "rtb-0acb0aff678b0ea8b",
            "vpc_id": "vpc-0a912388071284f86"
          },
          "depends_on": [
            "aws_route_table.terra-routetb-public",
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terra-nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed061d23cc5211e9",
            "id": "nat-011146c846e824167",
            "network_interface_id": "eni-0f29c9d21af6c672a",
            "private_ip": "10.80.1.188",
            "public_ip": "52.47.134.233",
            "subnet_id": "subnet-0d1d64710864ce3d1",
            "tags": {
              "Name": "terra-nat"
            }
          },
          "depends_on": [
            "aws_eip.terra-eip-nat",
            "aws_internet_gateway.terra-igw",
            "aws_subnet.terra-subnet-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "terra-private-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ac8d654774053ae91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-011146c846e824167",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ac8d654774053ae9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.terra-nat",
            "aws_route_table.terra-routetb-private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "terra-public-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01df90795cfe2c7a2",
            "id": "r-rtb-0acb0aff678b0ea8b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0acb0aff678b0ea8b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.terra-igw",
            "aws_route_table.terra-routetb-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra-routetb-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0385767270ff8d74f",
            "owner_id": "233224911788",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terra-database-route-table"
            },
            "vpc_id": "vpc-0a912388071284f86"
          },
          "depends_on": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra-routetb-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ac8d654774053ae9",
            "owner_id": "233224911788",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-011146c846e824167",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra-private-route-table"
            },
            "vpc_id": "vpc-0a912388071284f86"
          },
          "depends_on": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra-routetb-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0acb0aff678b0ea8b",
            "owner_id": "233224911788",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01df90795cfe2c7a2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra-public-route-table"
            },
            "vpc_id": "vpc-0a912388071284f86"
          },
          "depends_on": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-subnet-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0834ed92eed909bdb",
            "route_table_id": "rtb-0385767270ff8d74f",
            "subnet_id": "subnet-0c4afb8e059016c14"
          },
          "depends_on": [
            "aws_route_table.terra-routetb-db",
            "aws_subnet.terra-subnet-db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09449b266b6cfca06",
            "route_table_id": "rtb-0ac8d654774053ae9",
            "subnet_id": "subnet-0d64322c9f68a4546"
          },
          "depends_on": [
            "aws_route_table.terra-routetb-private",
            "aws_subnet.terra-subnet-private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9e1cf1110999f78",
            "route_table_id": "rtb-0acb0aff678b0ea8b",
            "subnet_id": "subnet-0d1d64710864ce3d1"
          },
          "depends_on": [
            "aws_route_table.terra-routetb-public",
            "aws_subnet.terra-subnet-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terra-bastion-access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:233224911788:security-group/sg-0b8de07fb6bf039d9",
            "description": "Allow access to bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8de07fb6bf039d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "213.109.233.15/32"
                ],
                "description": "Allow SSH connection to bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terra-bastion-access",
            "name_prefix": null,
            "owner_id": "233224911788",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terra-bastion-access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a912388071284f86"
          },
          "depends_on": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terra-private-access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:233224911788:security-group/sg-07dae8bfc36b9702f",
            "description": "Allow access to to private network hosts",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07dae8bfc36b9702f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b8de07fb6bf039d9"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terra-private-access",
            "name_prefix": null,
            "owner_id": "233224911788",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terra-private-access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a912388071284f86"
          },
          "depends_on": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "terra-private-access-ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3990912354",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07dae8bfc36b9702f",
            "self": false,
            "source_security_group_id": "sg-0b8de07fb6bf039d9",
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.terra-bastion-access",
            "aws_security_group.terra-private-access"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-subnet-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:233224911788:subnet/subnet-0c4afb8e059016c14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.80.3.0/24",
            "id": "subnet-0c4afb8e059016c14",
            "map_public_ip_on_launch": false,
            "owner_id": "233224911788",
            "tags": {
              "Name": "terra-subnet-db"
            },
            "vpc_id": "vpc-0a912388071284f86"
          },
          "depends_on": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-subnet-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:233224911788:subnet/subnet-0d64322c9f68a4546",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.80.2.0/24",
            "id": "subnet-0d64322c9f68a4546",
            "map_public_ip_on_launch": false,
            "owner_id": "233224911788",
            "tags": {
              "Name": "terra-subnet-private"
            },
            "vpc_id": "vpc-0a912388071284f86"
          },
          "depends_on": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-subnet-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:233224911788:subnet/subnet-0d1d64710864ce3d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.80.1.0/24",
            "id": "subnet-0d1d64710864ce3d1",
            "map_public_ip_on_launch": true,
            "owner_id": "233224911788",
            "tags": {
              "Name": "terra-subnet-public"
            },
            "vpc_id": "vpc-0a912388071284f86"
          },
          "depends_on": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:233224911788:vpc/vpc-0a912388071284f86",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.80.0.0/16",
            "default_network_acl_id": "acl-006c853a693ab3534",
            "default_route_table_id": "rtb-0acb0aff678b0ea8b",
            "default_security_group_id": "sg-00bbc91f77e0d39fb",
            "dhcp_options_id": "dopt-87beb1ee",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a912388071284f86",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0acb0aff678b0ea8b",
            "owner_id": "233224911788",
            "tags": {
              "Name": "terra-vpc"
            }
          }
        }
      ]
    }
  ]
}